--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -97,7 +97,7 @@ def enableSeparateBuildPerCPUArchitecture = false
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = true
 
 /**
  * The preferred build flavor of JavaScriptCore.
@@ -138,7 +138,7 @@ android {
         applicationId "co.com.hyg.HuecosMed"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 324
+        versionCode 325
         versionName "3.1.6"
         buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
 
@@ -256,6 +256,16 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
+
+    // For animated GIF support
+     implementation 'com.facebook.fresco:animated-gif:2.6.0'
+
+     // For WebP support, including animated WebP
+     implementation 'com.facebook.fresco:animated-webp:2.6.0'
+     implementation 'com.facebook.fresco:webpsupport:2.6.0'
+
+     // For WebP support, without animations
+     implementation 'com.facebook.fresco:webpsupport:2.6.0'
 
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
