--- a/ios/ReportesMed/Info.plist
+++ b/ios/ReportesMed/Info.plist
@@ -28,15 +28,59 @@
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
-			<key>localhost</key>
+			<key>https://www.medellin.gov.co/</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
 				<true/>
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Adjuntar Imagenes al Reporte</string>
+	<key>NSDesktopFolderUsageDescription</key>
+	<string>Adjuntar Imagenes al Reporte</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Adjuntar Ubicación al Reporte</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Adjuntar Imagenes al Reporte</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>montserratb.ttf</string>
+		<string>montserratreg.ttf</string>
+		<string>segoeui.ttf</string>
+		<string>segoeuib.ttf</string>
+		<string>segoeuii.ttf</string>
+		<string>segoeuil.ttf</string>
+		<string>segoeuisl.ttf</string>
+		<string>segoeuiz.ttf</string>
+		<string>seguili.ttf</string>
+		<string>seguisb.ttf</string>
+		<string>seguisbi.ttf</string>
+		<string>seguisli.ttf</string>
+		<string>AntDesign.ttf</string>
+		<string>Entypo.ttf</string>
+		<string>EvilIcons.ttf</string>
+		<string>Feather.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>FontAwesome5_Brands.ttf</string>
+		<string>FontAwesome5_Regular.ttf</string>
+		<string>FontAwesome5_Solid.ttf</string>
+		<string>Fontisto.ttf</string>
+		<string>Foundation.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>Octicons.ttf</string>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Zocial.ttf</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
