--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,7 +3,11 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '12.4'
 install! 'cocoapods', :deterministic_uuids => false
-
+pod 'Firebase', :modular_headers => true
+pod 'FirebaseCore', :modular_headers => true
+pod 'GoogleUtilities', :modular_headers => true
+$FirebaseSDKVersion = '10.0.0'
+$RNFirebaseAsStaticFramework = true
 target 'ReportesMed' do
   config = use_native_modules!
 
